--- a/coursera_projects/mod3_solution/css/style.css
+++ b/coursera_projects/mod3_solution/css/style.css
@@ -8,7 +8,6 @@ body {
 #header-nav {
   padding: 0;
   margin: 0;
-  /*height: 80px;*/
   background-color: #0f3c81;
   border: 0;
   border-radius: 0;
@@ -104,12 +103,16 @@ h2 {
 
 /**** Medium to Large devices only ****/
 @media (min-width: 992px) {
-
+  #header-nav {
+    height: 80px;
+  }
 }
 
 /**** Small devices only ****/
 @media (min-width: 768px) and (max-width: 991px) {
-
+  #header-nav {
+    height: 80px;
+  }
 }
 
 /**** Extra small devices only ****/
